# grech

./: LICENCE  OS_lecture_Support_tool-0.1.0-py3-none-any.whl  README.md  docker-compose.yml  grech-0.1.0-py3-none-any.whl  test.yml
.github/workflows/: ci.yml
docs/development/: README.md
src/: Dockerfile  test.yml
src/OS-lecture-Support-tool/: pyproject.toml
src/OS-lecture-Support-tool/os_lecture_support_tool/: main.py
src/OS-lecture-Support-tool/os_lecture_support_tool/Controller/: CheckController.py  ConfigController.py  InfoController.py
src/OS-lecture-Support-tool/os_lecture_support_tool/Model/result/: ScoreTable.py
src/OS-lecture-Support-tool/os_lecture_support_tool/Model/test/: CmdResult.py  Test.py
src/OS-lecture-Support-tool/os_lecture_support_tool/Mxodel/testInfo/: ReadTestInfo.py
src/OS-lecture-Support-tool/os_lecture_support_tool/UseCase/config/: ConfigSetUp.py  ReadConfig.py  SetConfig.py  SetUp.py
src/OS-lecture-Support-tool/os_lecture_support_tool/UseCase/score/: TotallingScore.py
src/OS-lecture-Support-tool/os_lecture_support_tool/UseCase/test/: RunAllTest.py  RunChapterTest.py  RunTest.py  TestSetUp.py
src/OS-lecture-Support-tool/os_lecture_support_tool/UseCase/testinfo/: ReadTestInfo.py
src/OS-lecture-Support-tool/os_lecture_support_tool/Views/: ViewConfig.py  ViewResult.py  ViewScore.py  ViewTestInfo.py
src/OS-lecture-Support-tool/os_lecture_support_tool/lib/: lib.py
src/OS-lecture-Support-tool/os_lecture_support_tool/model/config/: UserConfig.py
src/OS-lecture-Support-tool/os_lecture_support_tool/model/result/: ScoreTable.py  TestResultTable.py
src/OS-lecture-Support-tool/os_lecture_support_tool/model/test/: AllTest.py  Chapter.py  Test.py
src/OS-lecture-Support-tool/os_lecture_support_tool/model/testInfo/: TestInfo.py
src/OS-lecture-Support-tool/tests/: test_os_lecture_support_tool.py
src/grech/: pyproject.toml
src/grech/grech/: main.py
src/grech/grech/Controller/: CheckController.py  ConfigController.py  InfoController.py
src/grech/grech/Model/result/: TestResultTable.py
src/grech/grech/Model/testInfo/: TestInfo.py
src/grech/grech/UseCase/config/: ConfigSetUp.py  ReadConfig.py  SetConfig.py
src/grech/grech/UseCase/score/: TotallingScore.py
src/grech/grech/UseCase/test/: RunAllTest.py  RunChapterTest.py  RunTest.py  TestSetUp.py
src/grech/grech/UseCase/testinfo/: ReadTestInfo.py
src/grech/grech/Views/: ViewConfig.py  ViewResult.py  ViewResultMdTable.py  ViewScore.py  ViewTestInfo.py
src/grech/tests/: grech.py
